--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,7 +19,7 @@
 
         <div class="right-panel">
             <div class="form-wrapper">
-                <h1 class="brand-logo">R I V E</h1>
+                <h1 class="brand-logo">SHOPPING</h1>
                 
                 <p class="subtitle">Express login via Google and Facebook</p>
                 
